--- a/package.json
+++ b/package.json
@@ -83,10 +83,37 @@
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
     },
+    "moduleNameMapper": {
+      "^src/(.*)$": "<rootDir>/$1"
+    },
     "collectCoverageFrom": [
       "**/*.(t|j)s"
     ],
     "coverageDirectory": "../coverage",
+    "coverageThreshold": {
+      "global": {
+        "branches": 0,
+        "functions": 5,
+        "lines": 10,
+        "statements": 10
+      },
+      "src/auth/auth.service.ts": {
+        "branches": 60,
+        "statements": 70
+      },
+      "src/auth/user.service.ts": {
+        "branches": 60,
+        "statements": 70
+      },
+      "src/menu-category/menu-category.service.ts": {
+        "branches": 70,
+        "statements": 80
+      },
+      "src/menu-digital/menu-digital.service.ts": {
+        "branches": 65,
+        "statements": 80
+      }
+    },
     "testEnvironment": "node"
   }
 }
